[gd_scene load_steps=2 format=3 uid="uid://c8kj9m2n4p5qr"]

[ext_resource type="Script" path="res://Common/Effects/attack_effects/magic_sparkles_attack_effect.gd" id="1_3d7hg"]

[node name="MagicSparklesAttackEffect" type="Node3D"]
script = ExtResource("1_3d7hg")

[node name="MagicCore" type="MeshInstance3D" parent="."]

[node name="SparkleParticles" type="GPUParticles3D" parent="."]

[node name="ImpactParticles" type="GPUParticles3D" parent="."]